Fix haburger alignment

--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -26,7 +26,6 @@
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   outline: none;
   -webkit-tap-highlight-color: transparent;
 }
@@ -41,6 +40,7 @@
   width: 36px;
   height: 3px;
   position: relative;
+  margin-left: auto;
   background-color: #bbb;
 }
 
